# chadrez-teste

./: CMakeLists.txt  README.md
include/: Board.h  Game.h  Piece.h  Types.h
src/: Board.cpp  Game.cpp  Piece.cpp  main.cpp
